<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:content=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:hint="@string/enter_name"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:fontFamily="@font/roboto_light"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:hint="@string/enter_email"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:fontFamily="@font/roboto_light"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:fontFamily="@font/roboto_light"
            />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:hint="@string/enter_confirm_password"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:fontFamily="@font/roboto_light"
            android:inputType="textPassword"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/btn_sing_up"
                android:layout_marginEnd="2dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:text="@string/btn_login"
                android:layout_marginStart="2dp" />
        </LinearLayout>
        

    </LinearLayout>

</LinearLayout>